--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5500
-WEATHER_API_KEY=7095a0992ba3d304bc66b9143c18b78c
-GCODE_API_KEY=903378cc15834d46b495b699b8e180e7 
+WEATHER_API_KEY=""
+GCODE_API_KEY="" 
